--- a/about.html
+++ b/about.html
@@ -21,7 +21,9 @@ title: 我的Blog
   </ul>
   <h2>经历</h2>
   <ul>
-    <li>大学开始接触计算机，软件工程专业。那时候不知道编程的魅力在哪里,荒废了很多时间</li>
-    <li>大三在一家公司当.net实习生，对什么是编程,什么叫Web Developer的思考不断改观着，被向左偏移1px都在不断比较的专注感染。实习期间参与一个管理患者医疗信息的网站的开发</li>
+    <li>大学开始接触计算机，软件工程专业。那时候不知道编程的魅力在哪里,荒废了很多时间。</li>
+    <li>大三在一家公司当.net实习生，对什么是编程,什么叫Web Developer的思考不断改观着，被向左偏移1px都在不断比较的专注感染。实习期间参与一个管理患者医疗信息的网站的开发。</li>
+    <li>毕业后厚着脸皮去应聘了深圳一家外包公司,结果让我写rails到至今。</li>
   </ul>
+  <h2>工作经验</h2>
 </div>
