--- a/about.html
+++ b/about.html
@@ -23,7 +23,19 @@ title: 我的Blog
   <ul>
     <li>大学开始接触计算机，软件工程专业。那时候不知道编程的魅力在哪里,荒废了很多时间。</li>
     <li>大三在一家公司当.net实习生，对什么是编程,什么叫Web Developer的思考不断改观着，被向左偏移1px都在不断比较的专注感染。实习期间参与一个管理患者医疗信息的网站的开发。</li>
+    <li>大四因为不能忍受公司里氛围，辞职回校，自学php,并运用做了毕业设计。这期间学到很多东西，越来越对互联网感兴趣。</li>
     <li>毕业后厚着脸皮去应聘了深圳一家外包公司,结果让我写rails到至今。</li>
   </ul>
   <h2>工作经验</h2>
+  <div class="box">
+      <div class="list_one">易修</div>
+      <div class="list_two">
+          负责撰写接口，使用Grape构建RESTful API，grape-swagger生成的API文档。
+      </div>
+      <div class="list_third">对Rails很惊艳，各种各样的gem,遵守它既定的规则用得舒服。simple_form，activeadmin</div>
+  <!-- <ul>                                                                                                         -->
+      <!-- 事务逻辑 -->
+  <!--   <li>易修-----负责撰写接口，使用Grape构建RESTful API，grape-swagger生成的API文档。</li> -->
+  <!--   <li>mysky-----负责撰写接口，使用Grape构建RESTful API，grape-swagger生成的API文档。</li>  -->
+  <!-- </ul>                                                                                                        -->
 </div>
