--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@ title: 我的Blog
 <div class="box">
     <div class="list_one"><a href="http://www.chedone.com">车当</a></div>
   <div class="list_two">
-    负责前端页面数据显示
+    微信端前页面编写，并显示api提供的数据。
   </div>
   <div class="list_third">
       第一次采用了前后端分离的方式开发，为了兼容IE8，我选择用avalon这个MVVM框架，也系统的学习了如何用前端工具构建，前端自己不熟悉的区域，注定了学习道路的曲折。
