--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: index
 title: 我的Blog
 ---
-<h2>{{ page.title }}</h2>
-<p>最新文章</p>
-<ul>
-    　{% for post in site.posts %}
-        　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-        　{% endfor %}
-</ul>
+
+　{% for post in site.posts %}
+    <li>
+        <a href="{{ site.baseurl }}{{ post.url }}"><aside class="dates">{{ post.date | date_to_string }}</aside></a>
+        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }} <h2></h2></a>
+    </li>
+  {% endfor %}
