--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@ title: about me
   <ul>
     <li>姓名: 李忠义 (alshin)</li>
     <li>年龄: 1992 年出生</li>
-    <li>城市: 深圳</li>
-    <li>Email: bugchong1992@gmail.com</li>
+    <li>城市: 杭州</li>
+    <li>Email: alshin@gmail.com</li>
     <li>Github: <a href="https://github.com/yunshang">yunshang</a></li>
   </ul>
   <h2>技能</h2>
@@ -17,44 +17,15 @@ title: about me
     <li>熟悉Linux环境下面开发</li>
     <li>熟悉HTML、CSS、Javascript</li>
     <li>熟悉Vim</li>
-    <li>会一些PHP</li>
+    <li>会一些 PHP, Ruby </li>
   </ul>
   <h2>经历</h2>
   <ul>
-    <li>大学开始接触计算机，软件工程专业。那时候不知道编程的魅力在哪里,荒废了很多时间。</li>
-    <li>大三在一家公司当.net实习生，对什么是编程,什么叫Web Developer的思考不断改观着，被向左偏移1px都在不断比较的专注感染。实习期间参与一个管理患者医疗信息的网站的开发。</li>
-    <li>2015年06月,应聘了深圳一家外包公司,结果在该公司写rails到至今。</li>
+    <li>2015年06月,应聘了深圳一家外包公司,写 Ruby，做廉价劳动力</li>
     <li>2016年06月,深圳微莱信息有限公司。</li>
-    <li>2018年06月,杭州缦图摄影公司。</li>
+    <li>2017年08月,浙江数联公司。</li>
+    <li>2017年12月,杭州缦图摄影公司。</li>
+    <li>2018年04月,杭州竹简科技，区块链开发</li>
   </ul>
-  <h2>工作经验</h2>
-  <div class="box">
-    <div>项目名</div>
-    <div style="width:380px;text-align:center"> 工作 </div>
-    <div style="width:350px;text-align:center">收获</div>
-  </div>
-  <div class="box">
-      <div class="list_one">易修</div>
-    <div class="list_two">
-        负责撰写接口，使用Grape构建RESTful API，grape-swagger生成的API文档。
-    </div>
-    <div class="list_third">对Rails很惊艳，各种各样的gem,遵守它既定的规则用得舒服。simple_form,haml,activeadmin都让自己感到新奇。    </div>
 </div>
-<div class="box">
-  <div class="list_one"><a href="http://www.myskyair.com">mysky</a></div>
-  <div class="list_two">
-    参与了项目的全部开发,后台，微信端，pc端。
-  </div>
-  <div class="list_third">
-    对数据结构设计，事务逻辑的规范性有了更深的改观。网站的需求不对变更，不断考验着自己的数据库设计是否合理,自己也变的越来越疲于应付，最后导致在用七牛云存储托管网站静态文件时，发现前端的图片没有经过Rails处理，不能一并上传，深刻的教训。思考：什么才是一个好产品，不是什么都有就是好的。
-  </div>
-</div>
-<div class="box">
-    <div class="list_one"><a href="http://www.chedone.com">车当</a></div>
-  <div class="list_two">
-    微信端页面编写，并显示api提供的数据。
-  </div>
-  <div class="list_third">
-      第一次采用了前后端分离的方式开发，为了兼容IE8，我选择用avalon这个MVVM框架，也系统的学习了如何用前端工具构建，前端自己不熟悉的区域，注定了学习道路的曲折。
-  </div>
 </div>
